# MNIST

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WEEKLY_CHANGES.md  buff.cpp  build.sh  colabbuild.sh  mnist_debug  pred_build.sh
nn-models/nnv1_96/: biases_0.csv  biases_1.csv  biases_2.csv  biases_3.csv  descriptor.txt  hidden.csv  weights_1.csv  weights_2.csv  weights_3.csv
papers/: citation-369265604.txt
src/: File_reader.cpp  File_reader.h  Filer.cpp  Filer.h  main.cpp  test
src/Matrix/: matrix.cpp  matrix.cu  matrix.h
src/NN/: neural_network.cpp  neural_network.cu  neural_network.h
src/Predictor/: DrawWin.c  Predictor.cpp  Predictor.h  app  drawing.csv  drawing_28x28.raw  nn.c  subbuild.sh
src/Tensor/: tensor.cpp  tensor.cu  tensor.h
testing/: biases_0.csv  biases_1.csv  biases_2.csv  biases_3.csv  descriptor.txt  hidden.csv  output.csv  weights_1.csv  weights_2.csv  weights_3.csv
